Fix analyzer arrows on mobile - show on sides

--- a/styles.css
+++ b/styles.css
@@ -2464,37 +2464,18 @@ h1, h2, h3 {
 @media (max-width: 640px) {
     .analyzer-arrow {
         display: block;
-        top: auto;
-        bottom: -50px;
-        transform: rotate(90deg);
     }
 
     .analyzer-arrow-left {
-        left: 20%;
-        animation: bounceMobileLeft 1s ease-in-out infinite;
+        left: 5px;
     }
 
     .analyzer-arrow-right {
-        right: 20%;
-        animation: bounceMobileRight 1s ease-in-out infinite;
+        right: 5px;
     }
 
     .analyzer-arrow svg {
-        width: 30px;
-        height: 30px;
-    }
-
-    @keyframes bounceMobileLeft {
-        0%, 100% { transform: rotate(90deg) translateX(0); }
-        50% { transform: rotate(90deg) translateX(5px); }
-    }
-
-    @keyframes bounceMobileRight {
-        0%, 100% { transform: rotate(-90deg) translateX(0); }
-        50% { transform: rotate(-90deg) translateX(5px); }
-    }
-
-    .analyzer-arrow-right {
-        transform: rotate(-90deg);
+        width: 24px;
+        height: 24px;
     }
 }
